--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"code-format": "prettiest",
 		"repo-reset": "npm run code-clean && npm run test-cover-clean && rimraf node_modules",
 		"repo-reinstall": "npm run repo-reset && npm install",
+		"test": "node ./script/test.js",
 		"build": "npm run code-build",
 		"compile": "npm run code-compile",
 		"prepublishOnly": "npm run code-build",
