add dynamic import plugin
- replace dependency to preset-env by direct dependency to babel plugins
- update script in package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,42 @@
 	},
 	"dependencies": {
 		"@babel/core": "7.1.0",
-		"@babel/preset-env": "7.1.0",
+		"@babel/plugin-proposal-async-generator-functions": "7.2.0",
+		"@babel/plugin-proposal-json-strings": "7.2.0",
+		"@babel/plugin-proposal-object-rest-spread": "7.2.0",
+		"@babel/plugin-proposal-optional-catch-binding": "7.2.0",
+		"@babel/plugin-proposal-unicode-property-regex": "7.2.0",
+		"@babel/plugin-syntax-async-generators": "7.2.0",
+		"@babel/plugin-syntax-object-rest-spread": "7.2.0",
+		"@babel/plugin-syntax-optional-catch-binding": "7.2.0",
+		"@babel/plugin-transform-arrow-functions": "7.2.0",
+		"@babel/plugin-transform-async-to-generator": "7.2.0",
+		"@babel/plugin-transform-block-scoped-functions": "7.2.0",
+		"@babel/plugin-transform-block-scoping": "7.2.0",
+		"@babel/plugin-transform-classes": "7.2.0",
+		"@babel/plugin-transform-computed-properties": "7.2.0",
+		"@babel/plugin-transform-destructuring": "7.2.0",
+		"@babel/plugin-transform-dotall-regex": "7.2.0",
+		"@babel/plugin-transform-duplicate-keys": "7.2.0",
+		"@babel/plugin-transform-exponentiation-operator": "7.2.0",
+		"@babel/plugin-transform-for-of": "7.2.0",
+		"@babel/plugin-transform-function-name": "7.2.0",
+		"@babel/plugin-transform-literals": "7.2.0",
+		"@babel/plugin-transform-modules-amd": "7.2.0",
+		"@babel/plugin-transform-modules-commonjs": "7.2.0",
+		"@babel/plugin-transform-modules-systemjs": "7.2.0",
+		"@babel/plugin-transform-modules-umd": "7.2.0",
+		"@babel/plugin-transform-new-target": "7.0.0",
+		"@babel/plugin-transform-object-super": "7.2.0",
+		"@babel/plugin-transform-parameters": "7.2.0",
+		"@babel/plugin-transform-regenerator": "7.0.0",
+		"@babel/plugin-transform-shorthand-properties": "7.2.0",
+		"@babel/plugin-transform-spread": "7.2.0",
+		"@babel/plugin-transform-sticky-regex": "7.2.0",
+		"@babel/plugin-transform-template-literals": "7.2.0",
+		"@babel/plugin-transform-typeof-symbol": "7.2.0",
+		"@babel/plugin-transform-unicode-regex": "7.2.0",
+		"@babel/plugin-syntax-dynamic-import": "7.2.0",
 		"promise-sequential": "1.1.1",
 		"@dmail/project-structure": "github:dmail/project-structure"
 	},
@@ -41,18 +76,13 @@
 		"@babel/plugin-transform-spread": "7.0.0"
 	},
 	"scripts": {
-		"code-compile": "node ./script/compile.js",
-		"code-clean": "rimraf dist",
-		"code-build": "npm run code-clean && npm run code-compile",
-		"code-lint": "eslint .",
-		"code-list": "prettiest-list",
-		"code-format": "prettiest",
-		"repo-reset": "npm run code-clean && npm run test-cover-clean && rimraf node_modules",
-		"repo-reinstall": "npm run repo-reset && npm install",
+		"lint": "eslint .",
+		"format": "prettiest",
+		"compile": "node ./script/compile.js",
+		"clean": "rimraf dist",
+		"dist": "npm run clean && npm run compile",
 		"test": "node ./script/test.js",
-		"build": "npm run code-build",
-		"compile": "npm run code-compile",
-		"prepublishOnly": "npm run code-build",
-		"reinstall": "npm run repo-reinstall"
+		"prepublishOnly": "npm run dist",
+		"reinstall": "npm run clean && rimraf node_modules && npm install"
 	}
 }
