--- a/package.json
+++ b/package.json
@@ -71,9 +71,7 @@
 		"rimraf": "2.6.2",
 		"rollup": "0.66.2",
 		"rollup-plugin-node-resolve": "3.4.0",
-		"rollup-plugin-babel": "4.0.3",
-		"@babel/plugin-proposal-object-rest-spread": "7.0.0",
-		"@babel/plugin-transform-spread": "7.0.0"
+		"rollup-plugin-babel": "4.0.3"
 	},
 	"scripts": {
 		"lint": "eslint .",
