--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@babel/plugin-syntax-async-generators": "7.2.0",
 		"@babel/plugin-syntax-object-rest-spread": "7.2.0",
 		"@babel/plugin-syntax-optional-catch-binding": "7.2.0",
+    "@babel/plugin-syntax-import-meta": "7.2.0",
 		"@babel/plugin-transform-arrow-functions": "7.2.0",
 		"@babel/plugin-transform-async-to-generator": "7.2.0",
 		"@babel/plugin-transform-block-scoped-functions": "7.2.0",
